crates/corrosion-tests/tests/snapshots/db__initial_us.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-----------+------+--------------------------+
| endpoint  | icao | tokens                   |
+===========+======+==========================+
| 0.0.0.0:0 | BOOP | TokenSet({[0, 0, 0, 0]}) |
+-----------+------+--------------------------+
