crates/corrosion-tests/tests/snapshots/db__update_both_ud.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-------------+------+------+
| ip          | icao | port |
+=============+======+======+
| ::aaff:eeff | BBBB | 1234 |
+-------------+------+------+
