crates/corrosion-tests/tests/snapshots/db__update_both_us.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-----------+------+------------------------------------------------------+
| endpoint  | icao | tokens                                               |
+===========+======+======================================================+
| 0.0.0.0:0 | YYYY | TokenSet({[89, 89, 89, 89, 89, 89, 89, 89, 89, 89]}) |
+-----------+------+------------------------------------------------------+
