crates/corrosion-tests/tests/snapshots/db__updated_icao_ud.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-------------+------+------+
| ip          | icao | port |
+=============+======+======+
| ::aaff:eeff | ZZZZ | 8999 |
+-------------+------+------+
