crates/corrosion-tests/tests/snapshots/db__updated_icao_us.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-----------+------+--------------------------+
| endpoint  | icao | tokens                   |
+===========+======+==========================+
| 0.0.0.0:0 | ZZZZ | TokenSet({[0, 0, 0, 0]}) |
+-----------+------+--------------------------+
