crates/corrosion-tests/tests/snapshots/db__updated_port_ud.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-------------+------+------+
| ip          | icao | port |
+=============+======+======+
| ::aaff:eeff | ZZZZ | 9876 |
+-------------+------+------+
