crates/corrosion-tests/tests/snapshots/db__updated_tokenset_us.snap
---
source: crates/corrosion/tests/db.rs
expression: only_row().await
---
+-----------+------+----------------------------------------------------------------------------------------------+
| endpoint  | icao | tokens                                                                                       |
+===========+======+==============================================================================================+
| 0.0.0.0:0 | ZZZZ | TokenSet({[90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90]}) |
+-----------+------+----------------------------------------------------------------------------------------------+
